--- a/bx-core-server/rss-center/src/main/resources/bootstrap.yml
+++ b/bx-core-server/rss-center/src/main/resources/bootstrap.yml
@@ -13,10 +13,10 @@ server:
   port: 8000
 spring:
   application:
-    name: rss-center
+    name: user-center
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/rss-center?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&useSSL=false
+    url: jdbc:mysql://${bx.ip}:3306/rss-center?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&useSSL=false
     username: root
     password: root
     initialSize: 5
@@ -38,3 +38,65 @@ spring:
       minimum-idle: 5
       maximum-pool-size: 20
       connection-test-query: SELECT 1
+  #  rabbitmq:
+  #    host: ${bx.ip}
+  #    port: 5672
+  #    username: cloud-dev
+  #    password: cloud-dev
+  #    virtual-host: /
+#  redis:
+#    host: ${bx.ip}
+#    port: 6379
+#    password:
+#    timeout: 10s
+#    lettuce:
+#      pool:
+#        min-idle: 0
+#        max-idle: 8
+#        max-active: 8
+#        max-wait: -1ms
+  mvc:
+    servlet:
+      load-on-startup: 1
+  aop:
+    proxy-target-class: true
+  zipkin:
+    discovery-client-enabled: false
+  #      base-url: http://localhost:9411
+  #      enabled: true
+  #      sender:
+  #        type: web
+  cloud:
+    nacos:
+      config:
+        server-addr: ${bx.nacos.server-addr}
+        file-extension: yml
+        shared-dataids: common.yml
+        refreshable-dataids: common.yml
+      discovery:
+        server-addr: ${bx.nacos.server-addr}
+
+access_token:
+  store-jwt: false
+  jwt-signing-key: liugh=$==+_+%0%:)(:)
+
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    health:
+      show-details: always
+mybatis-plus:
+  mapper-locations: classpath:/mybatis-mappers/*Mapper.xml
+  typeAliasesPackage: com.cloud.model.user
+
+
+logging:
+  level:
+    root: info
+    com.cloud: debug
+  file: logs/${spring.application.name}.log
+
