--- a/bx-core-server/rss-center/src/main/resources/application.yml
+++ b/bx-core-server/rss-center/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
 #    username: root
 #    password: root
 
-    url: jdbc:mysql://10.164.204.153:32436/rss-center?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&useSSL=false
+    url: jdbc:mysql://localhost:3306/rss-center?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&useSSL=false
     username: admin
     password: admin
     initialSize: 5
