--- a/bx-core-server/rss-center/src/main/resources/application.yml
+++ b/bx-core-server/rss-center/src/main/resources/application.yml
@@ -29,6 +29,8 @@ spring:
       maximum-pool-size: 20
       connection-test-query: SELECT 1
 
+mybatis-plus:
+  mapper-locations: mapper/*.xml
 
 # CommaFeed settings
 # ------------------
